# datafusion-arrow-test

./: .gitignore  Cargo.toml  data.jsonl
src/: main.rs
