[package]
name = "df-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
datafusion = { version = "20.0", features = ["avro"]}
arrow = { git="https://github.com/apache/arrow-rs.git", branch="master" }
chrono = "0.4.24"

